[FIX] modal: Remove arbitrary "dialog" size for non-modal use so the spinner and message are positioned correctly over the object, also reduce astronomical z-index so it appears behind jQuery-ui dialogs (even though the spinner graphic stubbornly stays on top still)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@37252 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -1603,16 +1603,16 @@ form.simple select
 /* $.fn.modal */
 .mask {
 	position:absolute; 
-	z-index:99999;
+	z-index:999;
 	background-color:#FFFFFF;
 	display:none;
 }
 
 .boxes .dialog {
-	width:375px;
-	height:203px;
+	width: auto;
+	height: auto;
 	font-weight: bold;
-	z-index: 999999;
+	z-index: 9999;
 	text-align: center;
 }
 
